chore: implement script to load into the webapp the env variables defined in .env file associated to current azd env

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,7 @@ AZURE_OPENAI_PREVIEW_API_VERSION=2024-02-15-preview
 AZURE_OPENAI_STREAM=True
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_EMB_DEPLOYMENT=
+AZURE_OPENAI_EMB_MODEL_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
